# azalea-plugin-grafana

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: config.rs  errors.rs  logging.rs  main.rs  metrics.rs  plugin.rs
tests/: main.rs
